--- a/app/views/connect/index.html.erb
+++ b/app/views/connect/index.html.erb
@@ -10,44 +10,6 @@
             </div>
         </div>
         <div class="coversection">
-            <div
-                data-collapse="medium"
-                data-animation="over-right"
-                data-duration="1000"
-                data-no-scroll="1"
-                data-ix="navbar-appear"
-                class="navbar w-nav">
-                <div class="wide-container">
-                    <div data-ix="hamburgertoggle" class="menu-button w-nav-button">
-                        <div class="navbardiv1"></div>
-                        <div class="navbardiv2"></div>
-                        <div class="navbardiv3"></div>
-                    </div>
-                </div>
-                <div class="container w-container">
-                    <a href="/" class="w-nav-brand"><img
-                        src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a37b_LocationTech_Logo%5B1%5D.png"
-                        data-ix="icon-on-load"
-                        class="image-2"/></a>
-                    <div class="navbar-subtitle">Bringing Technology To Life</div>
-                    <nav role="navigation" class="nav-menu w-nav-menu">
-                        <a href="/" class="nav-link homelink w-nav-link">
-                            <strong class="navbartextinham">Home</strong>
-                        </a>
-                        <a
-                            href="http://mrgi-chat.webflow.io"
-                            class="nav-link w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny w-nav-link">
-                            <strong class="bold-text navbartextinhamhighlighted active-link-navbar chat">CHat</strong>
-                        </a>
-                        <a href="/gallery" class="nav-link w-nav-link">
-                            <strong class="navbartextinham">Gallery</strong>
-                        </a>
-                        <a href="/connect" class="nav-link toplinkhamburger w-nav-link w--current">
-                            <strong class="bold-text navbartextinhamhighlighted">Get a Quote</strong>
-                        </a>
-                    </nav>
-                </div>
-            </div>
             <div class="covercontainer w-container" data-ix="mrgi-usa-float">
                 <h1
                     data-ix="cover-title-appear"
@@ -237,36 +199,37 @@
                         <option value="15k - 50k">$15,000 - $50,000</option>
                         <option value="50k - 100k">$50,000 - $100,000</option>
                         <option value="100k - 200k">$100,000 - $200,000</option>
-                        <option value="200k">$200,000 +</option>
+                        <option value="200k+">$200,000 +</option>
                     </select>
-                    <label for="Name-2" class="field-label-2">Name:</label><input
+                    <label for="Name" class="field-label-2">Name:</label><input
                         type="text"
                         class="name w-input"
                         maxlength="256"
                         name="Name"
                         data-name="Name"
                         placeholder="Please enter your full name"
-                        id="Name-2"
+                        id="Name"
                         required="true"/>
-                    <label for="Email-2" class="field-label-3">Mobile:</label><input
-                        type="integer"
+                    <label for="telNo" class="field-label-3">Mobile:</label><input
+       
+                        type="tel"
                         class="name w-input"
                         maxlength="11"
-                        name="Name-4"
-                        data-name="Name 4"
-                        placeholder="Please enter your Cell number"
-                        id="Name-4"
+                        name="telNo"
+                        data-name="Mobile"
+                        placeholder="333-4444-4444"
+                        id="telNo"
                         required=""/>
-                    <label for="Email-3" class="field-label-3">Email Address:</label><input
+                    <label for="Email" class="field-label-3">Email Address:</label><input
                         type="email"
                         class="text-field-2 w-input"
                         maxlength="256"
                         name="Email"
                         data-name="Email"
                         placeholder="Enter your email"
-                        id="Email-2"
+                        id="Email"
                         required=""/>
-                    <label for="Project-Budget" class="field-label-4">Project Type(s) Involved:</label>
+                    <label for="Project-Type" class="field-label-4">Project Type(s) Involved:</label>
                     <div class="get-in-touch-form-checkbox w-row">
                         <div class="w-col w-col-6">
                             <div class="getintouchcheckbox w-checkbox"><input
@@ -341,10 +304,10 @@
                         type="text"
                         class="name w-input"
                         maxlength="256"
-                        name="Name-3"
-                        data-name="Name 3"
-                        placeholder="Please enter your full  name"
-                        id="Name-3"
+                        name="Domain"
+                        data-name="Domain"
+                        placeholder="Please enter your website (if applicable)"
+                        id="Website"
                         required=""/>
                     <label for="Company" class="field-label-9">Company Involved in project name:</label><input
                         type="text"
