fixes for https routes on images

--- a/app/views/connect/index.html.erb
+++ b/app/views/connect/index.html.erb
@@ -2,7 +2,7 @@
         <div data-ix="hide-on-load" class="floating-nav">
             <div class="nav-container w-clearfix">
                 <a href="#" class="navbar-logo w-inline-block w-clearfix"><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a37b_LocationTech_Logo%5B1%5D.png"
+                    src="https://httpsimage.com/v2/3364f11f-61bb-4567-bf7a-4361ac5ccc87.png"
                     width="57"
                     data-ix="floating-nav-logo-hover-flip"
                     class="navbar-logo floating"/></a>
@@ -42,7 +42,7 @@
                     href="#Section-3"
                     data-ix="arrow-appear"
                     class="go-down-link paddingfixforarrow w-inline-block"><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a375_white-down-arrow-png-2%5B1%5D.png"
+                    src="https://httpsimage.com/v2/f61bce67-24f9-4956-a606-1b2f79c9689c.png"
                     width="50"
                     data-ix="arrowhovereffect"/></a>
             </div>
@@ -70,7 +70,7 @@
                         href="#Section-5Plans"
                         data-ix="arrow-appear"
                         class="go-down-link w-hidden-small w-hidden-tiny w-inline-block"><img
-                        src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a375_white-down-arrow-png-2%5B1%5D.png"
+                        src="https://httpsimage.com/v2/f61bce67-24f9-4956-a606-1b2f79c9689c.png"
                         width="50"
                         data-ix="arrowhovereffect"/></a>
                     <h5 class="example-subtitle--about connectmargintop">We start with your
@@ -81,7 +81,7 @@
                         href="#Style-It"
                         data-ix="arrow-appear"
                         class="go-down-link-mobile w-hidden-main w-hidden-medium w-inline-block"><img
-                        src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a375_white-down-arrow-png-2%5B1%5D.png"
+                        src="https://httpsimage.com/v2/f61bce67-24f9-4956-a606-1b2f79c9689c.png"
                         width="50"
                         data-ix="arrowhovereffect"/></a>
                     <h1 id="Style-It" class="example-title">Our Plans</h1>
@@ -94,7 +94,7 @@
                             href="#File-it"
                             data-ix="arrow-appear"
                             class="go-down-link-mobile w-hidden-main w-hidden-medium w-inline-block"><img
-                            src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a375_white-down-arrow-png-2%5B1%5D.png"
+                            src="https://httpsimage.com/v2/f61bce67-24f9-4956-a606-1b2f79c9689c.png"
                             width="50"
                             data-ix="arrowhovereffect"/></a>
                         <ul>
@@ -119,7 +119,7 @@
                             href="#Ultimate"
                             data-ix="arrow-appear"
                             class="go-down-link-mobile w-hidden-main w-hidden-medium w-inline-block"><img
-                            src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a375_white-down-arrow-png-2%5B1%5D.png"
+                            src="https://httpsimage.com/v2/f61bce67-24f9-4956-a606-1b2f79c9689c.png"
                             width="50"
                             data-ix="arrowhovereffect"/></a>
                         <h2 class="pricingcolumnsh1">File it</h2>
@@ -148,7 +148,7 @@
                             href="#form-arrow"
                             data-ix="arrow-appear"
                             class="go-down-link-mobile w-hidden-main w-hidden-medium w-inline-block"><img
-                            src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a375_white-down-arrow-png-2%5B1%5D.png"
+                            src="https://httpsimage.com/v2/f61bce67-24f9-4956-a606-1b2f79c9689c.png"
                             width="50"
                             data-ix="arrowhovereffect"/></a>
                         <h2 class="pricingcolumnsh1">The Ultimate</h2>
