--- a/app/views/connect/privacy.html.erb
+++ b/app/views/connect/privacy.html.erb
@@ -14,7 +14,7 @@
             </div>
             <div class="container w-container">
                 <a href="/" class="w-nav-brand"><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a37b_LocationTech_Logo%5B1%5D.png"
+                    src="https://httpsimage.com/v2/3364f11f-61bb-4567-bf7a-4361ac5ccc87.png"
                     data-ix="icon-on-load"
                     class="image-2"/></a>
                 <div class="navbar-subtitle">Bringing Technology to Life</div>
@@ -37,7 +37,7 @@
         <div data-ix="hide-on-load" class="floating-nav">
             <div class="nav-container w-clearfix">
                 <a href="#" class="navbar-logo w-inline-block w-clearfix"><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a37b_LocationTech_Logo%5B1%5D.png"
+                    src="https://httpsimage.com/v2/3364f11f-61bb-4567-bf7a-4361ac5ccc87.png"
                     width="57"
                     data-ix="floating-nav-logo-hover-flip"
                     class="navbar-logo floating"/></a>
@@ -67,7 +67,7 @@
                 <div data-ix="cover-cta-appear" class="cover-cta">
                     <a href="/connect" class="button-cta w-button">Back to Plans</a>
                     <a href="#Section-2" data-ix="arrow-appear" class="go-down-link w-inline-block"><img
-                        src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a37c_592ff5b9723a917fb93de6ca_arrow-down%5B1%5D.svg"
+                        src="app/assets/images/arrow-down[1].svg"
                         width="50"
                         data-ix="arrowhovereffect"/></a>
                 </div>
