--- a/app/views/connect/terms.html.erb
+++ b/app/views/connect/terms.html.erb
@@ -14,7 +14,7 @@
             </div>
             <div class="container w-container">
                 <a href="/" class="w-nav-brand"><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a37b_LocationTech_Logo%5B1%5D.png"
+                    src="https://httpsimage.com/v2/3364f11f-61bb-4567-bf7a-4361ac5ccc87.png"
                     data-ix="icon-on-load"
                     class="image-2"/></a>
                 <div class="navbar-subtitle">Bringing Technology to Life</div>
@@ -37,7 +37,7 @@
         <div data-ix="hide-on-load" class="floating-nav">
             <div class="nav-container w-clearfix">
                 <a href="#" class="navbar-logo w-inline-block w-clearfix"><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a37b_LocationTech_Logo%5B1%5D.png"
+                    src="https://httpsimage.com/v2/3364f11f-61bb-4567-bf7a-4361ac5ccc87.png"
                     width="57"
                     data-ix="floating-nav-logo-hover-flip"
                     class="navbar-logo floating"/></a>
@@ -53,13 +53,13 @@
                     <a href="#Section-2" data-ix="arrow-appear" class="go-down-link w-inline-block"></a>
                 </div>
                 <div data-ix="layer-animation" class="layered-container"><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a390_566fb9dc1b4525b47c0c254d_3d_layer%25203%5B1%5D.svg"
+                    src="https://cdn.rawgit.com/CharlesDerek/a695cf20aba6abe6517032b831b8f25f/raw/65243ae1dcd0a1bdaf9ed935c47fef874fa42258/3dlayer79238789379.svg"
                     class="layer-1"/><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a391_566fb9dc1b4525b47c0c254c_3d_layer%25202%5B1%5D.svg"
+                    src="https://cdn.rawgit.com/CharlesDerek/a695cf20aba6abe6517032b831b8f25f/raw/f393b9a5dc136281c6b122f1ed6c5674808aa065/whitebackground.svg"
                     class="layer-2"/><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a377_566fb9dc1b4525b47c0c2550_3d-04%5B1%5D.svg"
+                    src="https://cdn.rawgit.com/CharlesDerek/a695cf20aba6abe6517032b831b8f25f/raw/acd6e0fc1bbe4fc241a17b42679816e65ad2ef87/3dlayer792387893796757r57.svg"
                     class="layer-3"/><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a379_566fb9dc1b4525b47c0c254f_3d-05%5B1%5D.svg"
+                    src="https://cdn.rawgit.com/CharlesDerek/a695cf20aba6abe6517032b831b8f25f/raw/b08fdf1ceedadb2f09d45178a19b9bdd2ee60ffc/3dlayer792387893796757r57492yr27y9.svg"
                     class="layer-4"/></div>
             </div>
         </div>
