--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,8 +23,10 @@
               <a href="/connect#Section-5Plans" class="button-cta w-button">Plans</a>
               <a href="#Section-2" class="button-cta secondary w-button">See How It Works</a>
               <a href="/" class="button-cta secondary w-button">Gallery</a>
-              <a href="#Section-2" data-ix="arrow-appear" class="go-down-link w-inline-block"><img
-                  src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a37c_592ff5b9723a917fb93de6ca_arrow-down%5B1%5D.svg"
+              <a href="#Section-2" data-ix="arrow-appear" class="go-down-link w-inline-block">
+                <img src="https://cdn.rawgit.com/CharlesDerek/a695cf20aba6abe6517032b831b8f25f/raw/e133cf7b183897f15b615d775ed504aab4cca55e/my-file.svg" width="50" data-ix="arrowhovereffect" />
+                <img
+                  src="/assets/locationtech.png"
                   width="50"
                   data-ix="arrowhovereffect"/></a>
           </div>
@@ -37,7 +39,7 @@
               href="#Section-3"
               data-ix="arrow-appear"
               class="go-down-link paddingfixforarrow w-inline-block"><img
-              src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a375_white-down-arrow-png-2%5B1%5D.png"
+              src="https://httpsimage.com/v2/f61bce67-24f9-4956-a606-1b2f79c9689c.png"
               width="50"
               data-ix="arrowhovereffect"/></a>
           <div class="text-block-2">Our developers are required to know not only how to
@@ -99,7 +101,7 @@
                   href="#Section-4-main"
                   data-ix="arrow-appear"
                   class="go-down-link w-inline-block"><img
-                  src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a375_white-down-arrow-png-2%5B1%5D.png"
+                  src="https://httpsimage.com/v2/f61bce67-24f9-4956-a606-1b2f79c9689c.png"
                   width="50"
                   data-ix="arrowhovereffect"/></a>
           </div>
@@ -127,18 +129,18 @@
                   doing with Layered Data Analysis Solutions.</h5>
               <h2 class="example-title">3-D Layering data solutions</h2>
               <a href="#Section-5" data-ix="arrow-appear" class="go-down-link w-inline-block"><img
-                  src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a375_white-down-arrow-png-2%5B1%5D.png"
+                  src="https://httpsimage.com/v2/f61bce67-24f9-4956-a606-1b2f79c9689c.png"
                   width="50"
                   data-ix="arrowhovereffect"/></a>
           </div>
           <div data-ix="layer-animation" class="layered-container"><img
-              src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a390_566fb9dc1b4525b47c0c254d_3d_layer%25203%5B1%5D.svg"
+              src="https://cdn.rawgit.com/CharlesDerek/a695cf20aba6abe6517032b831b8f25f/raw/65243ae1dcd0a1bdaf9ed935c47fef874fa42258/3dlayer79238789379.svg"
               class="layer-1"/><img
-              src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a391_566fb9dc1b4525b47c0c254c_3d_layer%25202%5B1%5D.svg"
+              src="https://cdn.rawgit.com/CharlesDerek/a695cf20aba6abe6517032b831b8f25f/raw/f393b9a5dc136281c6b122f1ed6c5674808aa065/whitebackground.svg"
               class="layer-2"/><img
-              src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a377_566fb9dc1b4525b47c0c2550_3d-04%5B1%5D.svg"
+              src="https://cdn.rawgit.com/CharlesDerek/a695cf20aba6abe6517032b831b8f25f/raw/acd6e0fc1bbe4fc241a17b42679816e65ad2ef87/3dlayer792387893796757r57.svg"
               class="layer-3"/><img
-              src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a379_566fb9dc1b4525b47c0c254f_3d-05%5B1%5D.svg"
+              src="https://cdn.rawgit.com/CharlesDerek/a695cf20aba6abe6517032b831b8f25f/raw/b08fdf1ceedadb2f09d45178a19b9bdd2ee60ffc/3dlayer792387893796757r57492yr27y9.svg"
               class="layer-4"/></div>
       </div>
   </div>
@@ -148,7 +150,7 @@
               <h5 class="example-subtitle">Keeping your users ENGAGED, with Customize INteractive abilities.</h5>
               <h2 class="example-title">Enhance User Experiences</h2>
               <a href="#Section-6" data-ix="arrow-appear" class="go-down-link w-inline-block"><img
-                  src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a375_white-down-arrow-png-2%5B1%5D.png"
+                  src="https://httpsimage.com/v2/f61bce67-24f9-4956-a606-1b2f79c9689c.png"
                   width="50"
                   data-ix="arrowhovereffect"/></a>
           </div>
@@ -157,10 +159,10 @@
                   <div data-ix="example-card-flip" class="card">
                       <div data-ix="example-card-appear-1" class="cardflip">
                           <div class="cardflip-side front"><img
-                              src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a37e_566fb9dc1b4525b47c0c2514_cardflip-front-diamond%5B1%5D.svg"
+                              src="https://cdn.rawgit.com/CharlesDerek/a695cf20aba6abe6517032b831b8f25f/raw/4b3e85fb99f437594486152e292c85305da87b28/diamond.svg"
                               class="cardflip-image cardflipfront"/></div>
                           <div class="cardflip-side back"><img
-                              src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a393_566fb9dc1b4525b47c0c2515_cardflip-back%5B1%5D.svg"
+                              src="https://cdn.rawgit.com/CharlesDerek/a695cf20aba6abe6517032b831b8f25f/raw/169f7352158ebffb90f1ff8aa020563af23105bd/orangetext.svg"
                               class="cardflip-image"/></div>
                       </div>
                   </div>
@@ -169,10 +171,10 @@
                   <div data-ix="example-card-flip" class="card">
                       <div data-ix="example-card-appear-2" class="cardflip">
                           <div class="cardflip-side front"><img
-                              src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a394_566fb9dc1b4525b47c0c2510_cardflip-front-circle%5B1%5D.svg"
+                              src="https://cdn.rawgit.com/CharlesDerek/a695cf20aba6abe6517032b831b8f25f/raw/8f4ac6739d4e0e53401a6cb8a7427b32ad6cb662/orangecircle.svg"
                               class="cardflip-image cardflipfront"/></div>
                           <div class="cardflip-side back"><img
-                              src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a393_566fb9dc1b4525b47c0c2515_cardflip-back%5B1%5D.svg"
+                              src="https://cdn.rawgit.com/CharlesDerek/a695cf20aba6abe6517032b831b8f25f/raw/169f7352158ebffb90f1ff8aa020563af23105bd/orangetext.svg"
                               class="cardflip-image"/></div>
                       </div>
                   </div>
@@ -181,10 +183,10 @@
                   <div data-ix="example-card-flip" class="card">
                       <div data-ix="example-card-appear-3" class="cardflip">
                           <div class="cardflip-side front"><img
-                              src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a38f_566fb9dc1b4525b47c0c2512_cardflip-front-triangle%5B1%5D.svg"
+                              src="https://cdn.rawgit.com/CharlesDerek/a695cf20aba6abe6517032b831b8f25f/raw/1e98083e333d19d887a9f9559feac41c2cf70dca/triangle.svg"
                               class="cardflip-image cardflipfront"/></div>
                           <div class="cardflip-side back"><img
-                              src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a393_566fb9dc1b4525b47c0c2515_cardflip-back%5B1%5D.svg"
+                              src="https://cdn.rawgit.com/CharlesDerek/a695cf20aba6abe6517032b831b8f25f/raw/169f7352158ebffb90f1ff8aa020563af23105bd/orangetext.svg"
                               class="cardflip-image"/></div>
                       </div>
                   </div>
@@ -193,10 +195,10 @@
                   <div data-ix="example-card-flip" class="card">
                       <div data-ix="example-card-appear-4" class="cardflip">
                           <div class="cardflip-side front"><img
-                              src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a38e_566fb9dc1b4525b47c0c2511_cardflip-front-square%5B1%5D.svg"
+                              src="https://cdn.rawgit.com/CharlesDerek/a695cf20aba6abe6517032b831b8f25f/raw/60f06a3221e4dda24f266090c7a14b70a73b94d8/squareorange.svg"
                               class="cardflip-image cardflipfront"/></div>
                           <div class="cardflip-side back"><img
-                              src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a393_566fb9dc1b4525b47c0c2515_cardflip-back%5B1%5D.svg"
+                              src="https://cdn.rawgit.com/CharlesDerek/a695cf20aba6abe6517032b831b8f25f/raw/169f7352158ebffb90f1ff8aa020563af23105bd/orangetext.svg"
                               class="cardflip-image"/></div>
                       </div>
                   </div>
@@ -216,7 +218,7 @@
                   href="#Section-7"
                   data-ix="arrow-appear"
                   class="go-down-link paddingfixforarrow w-inline-block"><img
-                  src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a375_white-down-arrow-png-2%5B1%5D.png"
+                  src="https://httpsimage.com/v2/f61bce67-24f9-4956-a606-1b2f79c9689c.png"
                   width="50"
                   data-ix="arrowhovereffect"/></a>
           </div>
@@ -254,7 +256,7 @@
                   href="#Section-8"
                   data-ix="arrow-appear"
                   class="go-down-link paddingfixforarrow section7fix w-inline-block"><img
-                  src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a375_white-down-arrow-png-2%5B1%5D.png"
+                  src="https://httpsimage.com/v2/f61bce67-24f9-4956-a606-1b2f79c9689c.png"
                   width="50"
                   data-ix="arrowhovereffect"/></a>
           </div>
@@ -274,7 +276,7 @@
                   href="#headersection"
                   data-ix="arrow-appear"
                   class="go-down-link paddingfixforarrow w-inline-block"><img
-                  src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a375_white-down-arrow-png-2%5B1%5D.png"
+                  src="https://httpsimage.com/v2/f61bce67-24f9-4956-a606-1b2f79c9689c.png"
                   width="50"
                   data-ix="arrowhovereffect"
                   class="bottomarrow"/></a>
