--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,7 @@
 <html data-wf-domain="mrginnovations.com" data-wf-page="5a04b009b12683000102a364" data-wf-site="5a04b009b12683000102a365">
   <head>
     <title>MRGI Software</title>
-      <meta charset="utf-8"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link
-              href="https://uploads-ssl.webflow.com/5a04b009b12683000102a365/css/mrgi.d91e2a3f4.css"
-              rel="stylesheet"
-              type="text/css"/>
+      <meta charset="utf-8"/><meta content="width=device-width, initial-scale=1" name="viewport"/><%= stylesheet_link_tag "application", :media => "all" %>
           <script
               src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"
               type="text/javascript"></script>
