--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,7 +18,7 @@
             </div>
             <div class="container w-container">
                 <a href="/" class="w-nav-brand"><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a37b_LocationTech_Logo%5B1%5D.png"
+                    src="https://httpsimage.com/v2/3364f11f-61bb-4567-bf7a-4361ac5ccc87.png"
                     data-ix="icon-on-load"
                     class="image-2"/></a>
                 <div class="navbar-subtitle">Bringing technology to life</div>
@@ -38,7 +38,7 @@
         <div data-ix="hide-on-load" class="floating-nav">
             <div class="nav-container w-clearfix">
                 <a href="" class="navbar-logo w-inline-block w-clearfix"><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a37b_LocationTech_Logo%5B1%5D.png"
+                    src="https://httpsimage.com/v2/3364f11f-61bb-4567-bf7a-4361ac5ccc87.png"
                     width="57"
                     data-ix="floating-nav-logo-hover-flip"
                     class="navbar-logo floating"/></a>
