try 2nd fb metas

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,18 @@
 <html data-wf-domain="mrginnovations.com" data-wf-page="5a04b009b12683000102a364" data-wf-site="5a04b009b12683000102a365">
   <head>
     <title>MRGI Software</title>
-      <meta charset="utf-8"/><meta content="width=device-width, initial-scale=1" name="viewport"/><meta property="og:title" content="Facebook Open Graph META Tags"/>
-<meta property="og:image" content="https://httpsimage.com/v2/3364f11f-61bb-4567-bf7a-4361ac5ccc87.png"/>
-<meta property="og:site_name" content="MRGI Software"/>
-<meta property="og:description" content="Leading Edge Software & Mobile Based Application Modeling, Design, & Production For Innovative Businesses"/>
-	
+      <meta charset="utf-8"/><meta content="width=device-width, initial-scale=1" name="viewport"/>
+      
+<meta name="description" content="Leading Edge Software & Mobile Based Application Modeling, Design, &amp; Production For Innovative Businesses."/>
+<link rel="canonical" href="https://www.mrginnovations.com/" />
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Software Management and Development Company | Software Services" />
+<meta property="og:description" content="Adventure Media is a unique Adwords Management Company and PPC Management Company, offering flat fees for any budget, &amp; delivering industry leading support." />
+<meta property="og:url" content="https://www.mrginnovations.com/" />
+<meta property="og:site_name" content="MRGI USA" />
+
+
       <%= stylesheet_link_tag "application", :media => "all" %>
           <script
               src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"
