new description meta for fb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Software Management and Development Company | Software Services" />
-<meta property="og:description" content="Adventure Media is a unique Adwords Management Company and PPC Management Company, offering flat fees for any budget, &amp; delivering industry leading support." />
+<meta property="og:description" content="MRGI USA is a unique Software Management Company and Application Management Company, offering flat fees for most budgets, &amp; delivering industry leading support." />
 <meta property="og:url" content="https://www.mrginnovations.com/" />
 <meta property="og:site_name" content="MRGI USA" />
 
