add summary in metas

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,10 @@
 <meta property="og:url" content="https://www.mrginnovations.com/" />
 <meta property="og:site_name" content="MRGI USA" />
 
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:description" content="MRGI USA is a unique Software Management Company and Application Management Company, offering flat fees for most budgets, &amp; delivering industry leading support." />
+<meta name="twitter:title" content="Software Management Company | Application Development Services" />
+
 
       <%= stylesheet_link_tag "application", :media => "all" %>
           <script
