fix arrow down and metas

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,11 +24,7 @@
               <a href="#Section-2" class="button-cta secondary w-button">See How It Works</a>
               <a href="/" class="button-cta secondary w-button">Gallery</a>
               <a href="#Section-2" data-ix="arrow-appear" class="go-down-link w-inline-block">
-                <img src="https://cdn.rawgit.com/CharlesDerek/a695cf20aba6abe6517032b831b8f25f/raw/e133cf7b183897f15b615d775ed504aab4cca55e/my-file.svg" width="50" data-ix="arrowhovereffect" />
-                <img
-                  src="/assets/locationtech.png"
-                  width="50"
-                  data-ix="arrowhovereffect"/></a>
+                <img src="https://cdn.rawgit.com/CharlesDerek/a695cf20aba6abe6517032b831b8f25f/raw/e133cf7b183897f15b615d775ed504aab4cca55e/my-file.svg" width="50" data-ix="arrowhovereffect" /></a>
           </div>
       </div>
   </div>
