--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,12 @@
 <meta name="description" content="Leading Edge Software & Mobile Based Application Modeling, Design, &amp; Production For Innovative Businesses."/>
 <link rel="canonical" href="https://www.mrginnovations.com/" />
 
+<meta property="og:url"                content="https://mrginnovations.com" />
+<meta property="og:type"               content="article" />
+<meta property="og:title"              content="Software Management and Development Company | Software Services" />
+<meta property="og:description"        content="MRGI USA is a unique Software Management Company and Application Management Company, offering flat fees for most budgets, &amp; delivering industry leading support." />
+<meta property="og:image"              content="https://httpsimage.com/v2/3364f11f-61bb-4567-bf7a-4361ac5ccc87.png" />
 
-<meta property="og:locale" content="en_US" />
-<meta property="og:type" content="website" />
-<meta property="og:title" content="Software Management and Development Company | Software Services" />
-<meta property="og:description" content="MRGI USA is a unique Software Management Company and Application Management Company, offering flat fees for most budgets, &amp; delivering industry leading support." />
-<meta property="og:url" content="https://www.mrginnovations.com/" />
-<meta property="og:image" content="https://httpsimage.com/v2/3364f11f-61bb-4567-bf7a-4361ac5ccc87.png">
-<meta property="og:site_name" content="MRGI USA" />
-
-<meta name="twitter:card" content="summary_large_image">
 
 
       <%= stylesheet_link_tag "application", :media => "all" %>
