http to https verification

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,23 @@
 <html data-wf-domain="mrginnovations.com" data-wf-page="5a04b009b12683000102a364" data-wf-site="5a04b009b12683000102a365">
   <head>
     <title>MRGI Software</title>
+
+<title>
+Redirecting...</title></head>
+
+<script language="JavaScript">
+function redirectHttpToHttps()
+{
+    var httpURL= window.location.hostname + window.location.pathname + window.location.search;
+    var httpsURL= "https://" + httpURL;
+    window.location = httpsURL;
+}
+redirectHttpToHttps();
+</script>
       <meta charset="utf-8"/><meta content="width=device-width, initial-scale=1" name="viewport"/>
       
 <meta name="description" content="Leading Edge Software & Mobile Based Application Modeling, Design, &amp; Production For Innovative Businesses."/>
 <link rel="canonical" href="https://www.mrginnovations.com/" />
-
 <meta property="og:url"                content="https://mrginnovations.com" />
 <meta property="og:type"               content="article" />
 <meta property="og:title"              content="Software Management and Development Company | Software Services" />
