--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,18 @@
 Redirecting...</title></head>
 
 <script language="JavaScript">
+
 function redirectHttpToHttps()
 {
     var httpURL= window.location.hostname + window.location.pathname + window.location.search;
     var httpsURL= "https://" + httpURL;
     window.location = httpsURL;
 }
-redirectHttpToHttps();
+
+
+if window.origin == "http://www.mrginnovations.com" {
+    redirectHttpToHttps();
+}
 </script>
       <meta charset="utf-8"/><meta content="width=device-width, initial-scale=1" name="viewport"/>
       
