fixed window.location commands

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,9 @@ function redirectHttpToHttps()
 }
 
 
-if window.origin == "http://www.mrginnovations.com" {
+if (window.origin == "http://www.mrginnovations.com") {
     redirectHttpToHttps();
-}
+} else null
 </script>
       <meta charset="utf-8"/><meta content="width=device-width, initial-scale=1" name="viewport"/>
       
