clean redirect of http

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,7 @@ function redirectHttpToHttps()
     var httpsURL= "https://" + httpURL;
     window.location = httpsURL;
 }
-
-
-if (window.origin == "http://www.mrginnovations.com") {
+if (window.location.protocol == "http:") {
     redirectHttpToHttps();
 } else null
 </script>
