--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,17 @@ if (window.location.protocol == "http:") {
     redirectHttpToHttps();
 } else null
 </script>
+
+<script>
+  function redirectHost() {
+    var PathAndSearch= "https://www.mrginnovations.com" + window.location.pathname + window.location.search;
+    window.location = PathAndSearch;
+  }
+  
+if (window.location.host == "mrgi-app.herokuapp.com") {
+  redirectHost();
+}
+</script>
       <meta charset="utf-8"/><meta content="width=device-width, initial-scale=1" name="viewport"/>
       
 <meta name="description" content="Leading Edge Software & Mobile Based Application Modeling, Design, &amp; Production For Innovative Businesses."/>
