--- a/app/views/connect/mrgi_mutual_contract_agreement_102.html.erb
+++ b/app/views/connect/mrgi_mutual_contract_agreement_102.html.erb
@@ -43,13 +43,7 @@ div#Section-3 { min-height: fit-content; } class="online-form-template ng-scope"
         <div id="Section-3" class="example bluebackground planssection">
             <div class="example-body minheight perspective--bottom adjustmobile3dheight">
                 <div data-ix="example-header-appear" class="example-header--about w-container">
-                    <a
-                        href="#Section-5Plans"
-                        data-ix="arrow-appear"
-                        class="go-down-link w-hidden-small w-hidden-tiny w-inline-block"><img
-                        src="https://httpsimage.com/v2/f61bce67-24f9-4956-a606-1b2f79c9689c.png"
-                        width="50"
-                        data-ix="arrowhovereffect"/></a><div class="online-form-template ng-scope" style="position: relative; overflow-x: hidden; overflow-y: auto; width: auto;" id="templateCode" data-spy="scroll"><p>
+                    <div class="online-form-template ng-scope" style="position: relative; overflow-x: hidden; height: 2000px; overflow-y: auto; width: auto;" id="templateCode" data-spy="scroll"><p>
     This Agreement is made between&nbsp;<span class="nolo_field inline-editor question-box-edit-dialog ng-scope ng-isolate-scope" data-field-name="client name" nolo-question-box-edit-dialog="" field="field" value-index="undefined">
     <span class="inline-field-value inlineFormElement ng-binding" ng-click="setActiveField(field.name, $event, valueIndex); $event.stopPropagation();" ng-bind-html="(field.displayValue(false, valueIndex)) | html">Client_Name</span>
     <!-- ngIf: field.hasHelpText() --><i class="icon-question-sign has-help-popover ng-scope" rel="popover" ng-click="showHelpPopover($event)" ng-if="field.hasHelpText()" data-content="<p>
