--- a/app/views/connect/mrgi_mutual_contract_agreement_102.html.erb
+++ b/app/views/connect/mrgi_mutual_contract_agreement_102.html.erb
@@ -14,7 +14,11 @@
     background-color: #e1e8da!important;
     border: 1px solid #b3ca8f!important;
 }
-div#Section-3 { min-height: fit-content; } class="online-form-template ng-scope" style="position: relative; height: 619px;
+div#Section-3 { min-height: fit-content; } 
+
+/*class="online-form-template ng-scope" style="position: relative; height: 619px;*/
+
+/*data-ix="example-header-appear"  style="opacity: 1; transform: translateX(0px) translateY(0px) translateZ(0px) scaleX(1) scaleY(1) scaleZ(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg); transform-style: preserve-3d; transition: opacity 1000ms ease-in-out, transform 1000ms ease-in-out;"
 </style>
 
         <div data-ix="hide-on-load" class="floating-nav">
@@ -42,8 +46,8 @@ div#Section-3 { min-height: fit-content; } class="online-form-template ng-scope"
         </div>
         <div id="Section-3" class="example bluebackground planssection">
             <div class="example-body minheight perspective--bottom adjustmobile3dheight">
-                <div data-ix="example-header-appear" class="example-header--about w-container">
-                    <div class="online-form-template ng-scope" style="position: relative; overflow-x: hidden; height: 2000px; overflow-y: auto; width: auto;" id="templateCode" data-spy="scroll"><p>
+                <div data-ix="example-header-appear" padding="10%" class="">
+                    <div class="online-form-template ng-scope" style="position: relative; overflow-x: visible; height: 2000px%>; overflow-y: visible; width: auto;" id="templateCode" data-spy="scroll"><p>
     This Agreement is made between&nbsp;<span class="nolo_field inline-editor question-box-edit-dialog ng-scope ng-isolate-scope" data-field-name="client name" nolo-question-box-edit-dialog="" field="field" value-index="undefined">
     <span class="inline-field-value inlineFormElement ng-binding" ng-click="setActiveField(field.name, $event, valueIndex); $event.stopPropagation();" ng-bind-html="(field.displayValue(false, valueIndex)) | html">Client_Name</span>
     <!-- ngIf: field.hasHelpText() --><i class="icon-question-sign has-help-popover ng-scope" rel="popover" ng-click="showHelpPopover($event)" ng-if="field.hasHelpText()" data-content="<p>
