Fixed http links in Images

--- a/app/views/connect/index.html.erb
+++ b/app/views/connect/index.html.erb
@@ -50,16 +50,16 @@
         <div id="Section-3" class="example bluebackground">
             <div class="example-body minheight perspective--bottom">
                 <div data-ix="responsive-image-open" class="responsiveimageopen"><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a396_xblock-04-mobile.png.pagespeed.ic.MgMyu72UCJ.png"
+                    src="https://uploads-ssl.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a396_xblock-04-mobile.png.pagespeed.ic.MgMyu72UCJ.png"
                     class="mobileimg"/><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a397_xblock-04-pop-a.png.pagespeed.ic.puMUe5-2nw.png"
+                    src="https://uploads-ssl.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a397_xblock-04-pop-a.png.pagespeed.ic.puMUe5-2nw.png"
                     class="_3dimagelayer-1a"/><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a398_xblock-04-desktop.png.pagespeed.ic.biPhfTfniS.png"
+                    src="https://uploads-ssl.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a398_xblock-04-desktop.png.pagespeed.ic.biPhfTfniS.png"
                     width="307"
                     class="desktopimg"/><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a39a_xblock-04-pop-b.png.pagespeed.ic.8XtDQ9QcmM_1.png"
+                    src="https://uploads-ssl.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a39a_xblock-04-pop-b.png.pagespeed.ic.8XtDQ9QcmM_1.png"
                     class="_3dimagelayer-2b"/><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a399_xblock-04-pop-c.png.pagespeed.ic.aMGEKfPoYo_1.png"
+                    src="https://uploads-ssl.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a399_xblock-04-pop-c.png.pagespeed.ic.aMGEKfPoYo_1.png"
                     class="_3dimagelayer-2c"/></div>
             </div>
         </div>
