--- a/app/views/connect/terms.html.erb
+++ b/app/views/connect/terms.html.erb
@@ -22,11 +22,8 @@
                     <a href="/" class="nav-link toplinkhamburger w-nav-link">
                         <strong class="bold-text navbartextinhamhighlighted active-link-navbar">Home</strong>
                     </a>
-                    <a href="http://mrgi-chat.webflow.io" class="nav-link w-nav-link">
-                        <strong class="bold-text navbartextinhamhighlighted active-link-navbar chat">CHat</strong>
-                    </a>
-                    <a href="/gallery" class="nav-link w-nav-link">
-                        <strong class="navbartextinham">Gallery</strong>
+                    <a href="/company" class="nav-link w-nav-link">
+                        <strong class="navbartextinham">What We Do</strong>
                     </a>
                     <a href="/connect" class="nav-link getquotelink w-nav-link">
                         <strong>Get In Touch</strong>
@@ -49,7 +46,7 @@
                 <div class="termsdiv"></div>
                 <h1 class="terms-h1">Below Is Our Terms Of Service.</h1>
                 <div data-ix="cover-cta-appear" class="cover-cta">
-                    <a href="/connect" class="button-cta w-button">Back to Plans</a>
+                    <a href="/connect#FormBlockGetInTouch" class="button-cta w-button">Back to Plans</a>
                     <a href="#Section-2" data-ix="arrow-appear" class="go-down-link w-inline-block"></a>
                 </div>
                 <div data-ix="layer-animation" class="layered-container"><img
