--- a/app/views/connect/privacy.html.erb
+++ b/app/views/connect/privacy.html.erb
@@ -22,11 +22,8 @@
                     <a href="/" class="nav-link toplinkhamburger w-nav-link">
                         <strong class="bold-text navbartextinhamhighlighted active-link-navbar">Home</strong>
                     </a>
-                    <a href="http://mrgi-chat.webflow.io" class="nav-link w-nav-link">
-                        <strong class="bold-text navbartextinhamhighlighted active-link-navbar chat">CHat</strong>
-                    </a>
-                    <a href="/gallery" class="nav-link w-nav-link">
-                        <strong class="navbartextinham">Gallery</strong>
+                    <a href="/company" class="nav-link w-nav-link">
+                        <strong class="navbartextinham">What We Do</strong>
                     </a>
                     <a href="/connect" class="nav-link getquotelink w-nav-link">
                         <strong>Get In Touch</strong>
@@ -48,16 +45,16 @@
             <div
                 class="example-body-gallery minheight-gallery perspective--bottom--gallery">
                 <div data-ix="responsive-image-open" class="responsiveimageopen-gallery"><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a396_xblock-04-mobile.png.pagespeed.ic.MgMyu72UCJ.png"
+                    src="https://uploads-ssl.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a396_xblock-04-mobile.png.pagespeed.ic.MgMyu72UCJ.png"
                     class="mobileimg"/><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a397_xblock-04-pop-a.png.pagespeed.ic.puMUe5-2nw.png"
+                    src="https://uploads-ssl.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a397_xblock-04-pop-a.png.pagespeed.ic.puMUe5-2nw.png"
                     class="_3dimagelayer-1a"/><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a398_xblock-04-desktop.png.pagespeed.ic.biPhfTfniS.png"
+                    src="https://uploads-ssl.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a398_xblock-04-desktop.png.pagespeed.ic.biPhfTfniS.png"
                     width="307"
                     class="desktopimg"/><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a39a_xblock-04-pop-b.png.pagespeed.ic.8XtDQ9QcmM_1.png"
+                    src="https://uploads-ssl.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a39a_xblock-04-pop-b.png.pagespeed.ic.8XtDQ9QcmM_1.png"
                     class="_3dimagelayer-2b"/><img
-                    src="http://uploads.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a399_xblock-04-pop-c.png.pagespeed.ic.aMGEKfPoYo_1.png"
+                    src="https://uploads-ssl.webflow.com/5a04b009b12683000102a365/5a04b009b12683000102a399_xblock-04-pop-c.png.pagespeed.ic.aMGEKfPoYo_1.png"
                     class="_3dimagelayer-2c"/></div>
             </div>
         </div>
@@ -65,7 +62,7 @@
             <div class="covercontainer-gallery w-container">
                 <div data-ix="cover-subtitle-appear" class="cover-subtitle">Below is our site wide Privacy policy.</div>
                 <div data-ix="cover-cta-appear" class="cover-cta">
-                    <a href="/connect" class="button-cta w-button">Back to Plans</a>
+                    <a href="/connect#FormBlockGetInTouch" class="button-cta w-button">Back to Plans</a>
                     <a href="#Section-2" data-ix="arrow-appear" class="go-down-link w-inline-block"><img
                         src="app/assets/images/arrow-down[1].svg"
                         width="50"
