auto-radio btns checked

--- a/app/views/connect/index.html.erb
+++ b/app/views/connect/index.html.erb
@@ -328,7 +328,7 @@
                         data-name="Additional Notes"
                         class="text-field talkbox w-input"></textarea>
                     <div class="w-radio"><input
-                        type="radio"
+                        type="radio" checked="checked" checked="checked"
                         id="radio"
                         name="radio"
                         value="Radio"
