--- a/app/views/connect/mrgi_mutual_contract_agreement_102.html.erb
+++ b/app/views/connect/mrgi_mutual_contract_agreement_102.html.erb
@@ -213,7 +213,7 @@ div#Section-3 { min-height: fit-content; }
             <!-- ngRepeat: option in options track by $index --><tr ng-repeat="option in options track by $index" ng-class="getClass($index)" ng-click="selectOption($index, valueIndex, $event)" class="ng-scope unselectedClause">
                 <td class="optional-clause-answer optionSelection" width="20">
                     <div ng-class="getCheckboxClass($index)" class="ng-binding">
-                        <input type="radio" ng-model="field.value[valueIndex]" value="full reimbursement" ng-checked="isSelected($index)" ng-disabled="$parent.$parent.isReadOnly()" class="ng-pristine ng-untouched ng-valid" name="398"> 
+                        <input type="radio" checked="checked" checked="checked" ng-model="field.value[valueIndex]" value="full reimbursement" ng-checked="isSelected($index)" ng-disabled="$parent.$parent.isReadOnly()" class="ng-pristine ng-untouched ng-valid" name="398"> 
                     </div>
                 </td>
                 <td class="optional-clause-index optionSelection" width="20"><span class="optionIndex ng-binding">A:</span></td>
@@ -240,7 +240,7 @@ div#Section-3 { min-height: fit-content; }
             </tr><!-- end ngRepeat: option in options track by $index --><tr ng-repeat="option in options track by $index" ng-class="getClass($index)" ng-click="selectOption($index, valueIndex, $event)" class="ng-scope unselectedClause">
                 <td class="optional-clause-answer optionSelection" width="20">
                     <div ng-class="getCheckboxClass($index)" class="ng-binding">
-                        <input type="radio" ng-model="field.value[valueIndex]" value="developer pays expenses" ng-checked="isSelected($index)" ng-disabled="$parent.$parent.isReadOnly()" class="ng-pristine ng-untouched ng-valid" name="400"> 
+                        <input type="radio" checked="checked" checked="checked" ng-model="field.value[valueIndex]" value="developer pays expenses" ng-checked="isSelected($index)" ng-disabled="$parent.$parent.isReadOnly()" class="ng-pristine ng-untouched ng-valid" name="400"> 
                     </div>
                 </td>
                 <td class="optional-clause-index optionSelection" width="20"><span class="optionIndex ng-binding">B:</span></td>
@@ -281,7 +281,7 @@ div#Section-3 { min-height: fit-content; }
             <!-- ngRepeat: option in options track by $index --><tr ng-repeat="option in options track by $index" ng-class="getClass($index)" ng-click="selectOption($index, valueIndex, $event)" class="ng-scope unselectedClause">
                 <td class="optional-clause-answer optionSelection" width="20">
                     <div ng-class="getCheckboxClass($index)" class="ng-binding">
-                        <input type="radio" ng-model="field.value[valueIndex]" value="monthly interest" ng-checked="isSelected($index)" ng-disabled="$parent.$parent.isReadOnly()" class="ng-pristine ng-untouched ng-valid" name="421"> 
+                        <input type="radio" checked="checked" checked="checked" ng-model="field.value[valueIndex]" value="monthly interest" ng-checked="isSelected($index)" ng-disabled="$parent.$parent.isReadOnly()" class="ng-pristine ng-untouched ng-valid" name="421"> 
                     </div>
                 </td>
                 <td class="optional-clause-index optionSelection" width="20"><span class="optionIndex ng-binding">A:</span></td>
@@ -295,7 +295,7 @@ div#Section-3 { min-height: fit-content; }
             </tr><!-- end ngRepeat: option in options track by $index --><tr ng-repeat="option in options track by $index" ng-class="getClass($index)" ng-click="selectOption($index, valueIndex, $event)" class="ng-scope unselectedClause">
                 <td class="optional-clause-answer optionSelection" width="20">
                     <div ng-class="getCheckboxClass($index)" class="ng-binding">
-                        <input type="radio" ng-model="field.value[valueIndex]" value="other late fee" ng-checked="isSelected($index)" ng-disabled="$parent.$parent.isReadOnly()" class="ng-pristine ng-untouched ng-valid" name="423"> 
+                        <input type="radio" checked="checked" checked="checked" ng-model="field.value[valueIndex]" value="other late fee" ng-checked="isSelected($index)" ng-disabled="$parent.$parent.isReadOnly()" class="ng-pristine ng-untouched ng-valid" name="423"> 
                     </div>
                 </td>
                 <td class="optional-clause-index optionSelection" width="20"><span class="optionIndex ng-binding">B:</span></td>
@@ -555,7 +555,7 @@ div#Section-3 { min-height: fit-content; }
             <!-- ngRepeat: option in options track by $index --><tr ng-repeat="option in options track by $index" ng-class="getClass($index)" ng-click="selectOption($index, valueIndex, $event)" class="ng-scope unselectedClause">
                 <td class="optional-clause-answer optionSelection" width="20">
                     <div ng-class="getCheckboxClass($index)" class="ng-binding">
-                        <input type="radio" ng-model="field.value[valueIndex]" value="limited warranty against infringement" ng-checked="isSelected($index)" ng-disabled="$parent.$parent.isReadOnly()" class="ng-pristine ng-untouched ng-valid" name="500"> 
+                        <input type="radio" checked="checked" checked="checked" ng-model="field.value[valueIndex]" value="limited warranty against infringement" ng-checked="isSelected($index)" ng-disabled="$parent.$parent.isReadOnly()" class="ng-pristine ng-untouched ng-valid" name="500"> 
                     </div>
                 </td>
                 <td class="optional-clause-index optionSelection" width="20"><span class="optionIndex ng-binding">A:</span></td>
@@ -614,7 +614,7 @@ div#Section-3 { min-height: fit-content; }
             </tr><!-- end ngRepeat: option in options track by $index --><tr ng-repeat="option in options track by $index" ng-class="getClass($index)" ng-click="selectOption($index, valueIndex, $event)" class="ng-scope unselectedClause">
                 <td class="optional-clause-answer optionSelection" width="20">
                     <div ng-class="getCheckboxClass($index)" class="ng-binding">
-                        <input type="radio" ng-model="field.value[valueIndex]" value="&quot;no-knowledge&quot; representation" ng-checked="isSelected($index)" ng-disabled="$parent.$parent.isReadOnly()" class="ng-pristine ng-untouched ng-valid" name="502"> 
+                        <input type="radio" checked="checked" checked="checked" ng-model="field.value[valueIndex]" value="&quot;no-knowledge&quot; representation" ng-checked="isSelected($index)" ng-disabled="$parent.$parent.isReadOnly()" class="ng-pristine ng-untouched ng-valid" name="502"> 
                     </div>
                 </td>
                 <td class="optional-clause-index optionSelection" width="20"><span class="optionIndex ng-binding">B:</span></td>
@@ -630,7 +630,7 @@ div#Section-3 { min-height: fit-content; }
             </tr><!-- end ngRepeat: option in options track by $index --><tr ng-repeat="option in options track by $index" ng-class="getClass($index)" ng-click="selectOption($index, valueIndex, $event)" class="ng-scope unselectedClause">
                 <td class="optional-clause-answer optionSelection" width="20">
                     <div ng-class="getCheckboxClass($index)" class="ng-binding">
-                        <input type="radio" ng-model="field.value[valueIndex]" value="no warranties or representations" ng-checked="isSelected($index)" ng-disabled="$parent.$parent.isReadOnly()" class="ng-pristine ng-untouched ng-valid" name="504"> 
+                        <input type="radio" checked="checked" checked="checked" ng-model="field.value[valueIndex]" value="no warranties or representations" ng-checked="isSelected($index)" ng-disabled="$parent.$parent.isReadOnly()" class="ng-pristine ng-untouched ng-valid" name="504"> 
                     </div>
                 </td>
                 <td class="optional-clause-index optionSelection" width="20"><span class="optionIndex ng-binding">C:</span></td>
@@ -1021,7 +1021,7 @@ div#Section-3 { min-height: fit-content; }
             <!-- ngRepeat: option in options track by $index --><tr ng-repeat="option in options track by $index" ng-class="getClass($index)" ng-click="selectOption($index, valueIndex, $event)" class="ng-scope unselectedClause">
                 <td class="optional-clause-answer optionSelection" width="20">
                     <div ng-class="getCheckboxClass($index)" class="ng-binding">
-                        <input type="radio" ng-model="field.value[valueIndex]" value="mediation only" ng-checked="isSelected($index)" ng-disabled="$parent.$parent.isReadOnly()" class="ng-pristine ng-untouched ng-valid" name="619"> 
+                        <input type="radio" checked="checked" checked="checked" ng-model="field.value[valueIndex]" value="mediation only" ng-checked="isSelected($index)" ng-disabled="$parent.$parent.isReadOnly()" class="ng-pristine ng-untouched ng-valid" name="619"> 
                     </div>
                 </td>
                 <td class="optional-clause-index optionSelection" width="20"><span class="optionIndex ng-binding">A:</span></td>
@@ -1034,7 +1034,7 @@ div#Section-3 { min-height: fit-content; }
             </tr><!-- end ngRepeat: option in options track by $index --><tr ng-repeat="option in options track by $index" ng-class="getClass($index)" ng-click="selectOption($index, valueIndex, $event)" class="ng-scope unselectedClause">
                 <td class="optional-clause-answer optionSelection" width="20">
                     <div ng-class="getCheckboxClass($index)" class="ng-binding">
-                        <input type="radio" ng-model="field.value[valueIndex]" value="mediation to arbitration (no litigation)" ng-checked="isSelected($index)" ng-disabled="$parent.$parent.isReadOnly()" class="ng-pristine ng-untouched ng-valid" name="621"> 
+                        <input type="radio" checked="checked" checked="checked" ng-model="field.value[valueIndex]" value="mediation to arbitration (no litigation)" ng-checked="isSelected($index)" ng-disabled="$parent.$parent.isReadOnly()" class="ng-pristine ng-untouched ng-valid" name="621"> 
                     </div>
                 </td>
                 <td class="optional-clause-index optionSelection" width="20"><span class="optionIndex ng-binding">B:</span></td>
